# FinAgentLight

./: .gitignore  Makefile  README.md  pyproject.toml  run.py
assets/: system_prompt.txt  user_prompt.txt
configs/: AAPL.py
configs/_asset_list_/: exp_stocks.json
dev_config/python/: .pre-commit-config.yaml  mypy.ini  ruff.toml
finagentlight/: __init__.py  agent.py  config.py  dataset.py  environment.py  function_calling.py  llm.py  logger.py  registry.py  scaler.py
finagentlight/utils/: file_utils.py  joblib_utils.py  json.py  timestamp.py
