[tool.poetry]
name = "finagentlight"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openmim = "^0.3.0"
mmengine = "^0.10.5"
litellm = "^1.55.9"
tenacity = "^9.0.0"
json-repair = "^0.33.0"
pyarrow = "^18.1.0"
fastparquet = "^2024.11.0"
gym = "^0.26.2"
torch = "2.2.0"
torchaudio = "2.2.0"
torchvision = "0.17.0"
joblib = "^1.4.2"
numpy = "1.26.4"
pyjson5 = "^1.6.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
mypy = "^1.14.0"
ruff = "^0.8.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
